--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // https://mvnrepository.com/artifact/org.apache.kafka/connect-api
+    implementation 'org.apache.kafka:connect-api:3.8.0'
 }
 
 tasks.named('test') {
